// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalFormList /> <TestProposalFormList /> should render correctly when admin 1`] = `
<div
  className="sc-bdnxRM kZFksl"
>
  <table
    className="sc-bdnxRM jIIBsu"
  >
    <thead
      className="sc-bdnxRM dSQJSh"
    >
      <tr
        className="sc-bdnxRM Tr___StyledAppBox-hsEdDO  fBURYy"
      >
        <th
          className="sc-bdnxRM ejslJN"
        >
          global.title
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        >
          global.project
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        >
          global.owner
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        >
          global.update
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        >
          <div
            className="sc-bdnxRM egMNHw"
          >
            <button
              aria-controls="id-2"
              aria-expanded={false}
              aria-haspopup="menu"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kZgVYy jfKDDI"
              onClick={[Function]}
              onClickCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPressCapture={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseEnter={[Function]}
              type="button"
            >
              creation
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG bFiFFK fZkSKg AMDLx icon"
              />
            </button>
            <div
              aria-orientation="vertical"
              className="sc-bdnxRM Flex___StyledAppBox-RSPpX ieTJLY MenuList__MenuItems-gmUGHY QxsKs"
              data-dialog={true}
              hidden={true}
              id="id-2"
              onAnimationEnd={[Function]}
              onBlur={[Function]}
              onBlurCapture={[Function]}
              onFocus={[Function]}
              onFocusCapture={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onKeyUpCapture={[Function]}
              onTransitionEnd={[Function]}
              role="menu"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "opacity": 0,
                  "outline": "none",
                  "position": "fixed",
                  "top": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="sc-bdnxRM MenuOptionGroup___StyledAppBox-htQLzr  hVghjK"
                role="group"
              >
                <p
                  className="sc-bdnxRM jKNOoN menu__option__group--title"
                >
                  sort-by
                </p>
                <button
                  className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
                  id="id-2-1"
                  onBlurCapture={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPressCapture={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  <input
                    checked={true}
                    className="sc-bdnxRM MenuOptionItem___StyledAppBox-kGsnIN jEwVk cYBHaW"
                    type="radio"
                  />
                  <p
                    className="sc-bdnxRM isZYbz"
                  >
                    global.filter_last
                  </p>
                  <IconMock
                    className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG kFTgjR fZkSKg AMDLx icon"
                  />
                </button>
                <button
                  className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
                  id="id-2-2"
                  onBlurCapture={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPressCapture={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  <input
                    checked={false}
                    className="sc-bdnxRM MenuOptionItem___StyledAppBox-kGsnIN jEwVk cYBHaW"
                    type="radio"
                  />
                  <p
                    className="sc-bdnxRM isZYbz"
                  >
                    global.filter_old
                  </p>
                  <IconMock
                    className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG kFTgjR fZkSKg AMDLx icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        />
      </tr>
    </thead>
    <tbody
      className="sc-bdnxRM dZBmCd"
    >
      <tr
        className="sc-bdnxRM Tr___StyledAppBox-hsEdDO  fBURYy"
        id="proposalForm-1"
      >
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminAlphaUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"username"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"updatedAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"createdAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs deidyN crfCBn visible-on-hover"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <div
            className="sc-bdnxRM Flex___StyledAppBox-RSPpX hekVRm fGTmtL"
          >
            <button
              aria-describedby="id-3"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ btn-duplicate"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-3"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <button
              aria-controls="id-4"
              aria-describedby="id-5"
              aria-expanded={false}
              aria-haspopup="dialog"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hAxyJi"
              onBlur={[Function]}
              onClick={[Function]}
              onClickCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPressCapture={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-5"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <div
              aria-label="delete-confirmation"
              aria-modal={true}
              data-dialog={true}
              hidden={true}
              id="id-4"
              onAnimationEnd={[Function]}
              onBlur={[Function]}
              onKeyDown={[Function]}
              onTransitionEnd={[Function]}
              role="dialog"
              style={
                Object {
                  "display": "none",
                }
              }
              tabIndex={-1}
            />
          </div>
        </td>
      </tr>
      <tr
        className="sc-bdnxRM Tr___StyledAppBox-hsEdDO  fBURYy"
        id="proposalForm-2"
      >
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminAlphaUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"username"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"updatedAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"createdAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs deidyN crfCBn visible-on-hover"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <div
            className="sc-bdnxRM Flex___StyledAppBox-RSPpX hekVRm fGTmtL"
          >
            <button
              aria-describedby="id-6"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ btn-duplicate"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-6"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <button
              aria-controls="id-7"
              aria-describedby="id-8"
              aria-expanded={false}
              aria-haspopup="dialog"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hAxyJi"
              onBlur={[Function]}
              onClick={[Function]}
              onClickCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPressCapture={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-8"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <div
              aria-label="delete-confirmation"
              aria-modal={true}
              data-dialog={true}
              hidden={true}
              id="id-7"
              onAnimationEnd={[Function]}
              onBlur={[Function]}
              onKeyDown={[Function]}
              onTransitionEnd={[Function]}
              role="dialog"
              style={
                Object {
                  "display": "none",
                }
              }
              tabIndex={-1}
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ProposalFormList /> <TestProposalFormList /> should render correctly when admin project 1`] = `
<div
  className="sc-bdnxRM kZFksl"
>
  <table
    className="sc-bdnxRM jIIBsu"
  >
    <thead
      className="sc-bdnxRM dSQJSh"
    >
      <tr
        className="sc-bdnxRM Tr___StyledAppBox-hsEdDO  fBURYy"
      >
        <th
          className="sc-bdnxRM ejslJN"
        >
          global.title
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        >
          global.project
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        >
          global.update
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        >
          <div
            className="sc-bdnxRM egMNHw"
          >
            <button
              aria-controls="id-2"
              aria-expanded={false}
              aria-haspopup="menu"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kZgVYy jfKDDI"
              onClick={[Function]}
              onClickCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPressCapture={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseEnter={[Function]}
              type="button"
            >
              creation
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG bFiFFK fZkSKg AMDLx icon"
              />
            </button>
            <div
              aria-orientation="vertical"
              className="sc-bdnxRM Flex___StyledAppBox-RSPpX ieTJLY MenuList__MenuItems-gmUGHY QxsKs"
              data-dialog={true}
              hidden={true}
              id="id-2"
              onAnimationEnd={[Function]}
              onBlur={[Function]}
              onBlurCapture={[Function]}
              onFocus={[Function]}
              onFocusCapture={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onKeyUpCapture={[Function]}
              onTransitionEnd={[Function]}
              role="menu"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "opacity": 0,
                  "outline": "none",
                  "position": "fixed",
                  "top": "100%",
                }
              }
              tabIndex={-1}
            >
              <div
                className="sc-bdnxRM MenuOptionGroup___StyledAppBox-htQLzr  hVghjK"
                role="group"
              >
                <p
                  className="sc-bdnxRM jKNOoN menu__option__group--title"
                >
                  sort-by
                </p>
                <button
                  className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
                  id="id-2-1"
                  onBlurCapture={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPressCapture={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  <input
                    checked={true}
                    className="sc-bdnxRM MenuOptionItem___StyledAppBox-kGsnIN jEwVk cYBHaW"
                    type="radio"
                  />
                  <p
                    className="sc-bdnxRM isZYbz"
                  >
                    global.filter_last
                  </p>
                  <IconMock
                    className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG kFTgjR fZkSKg AMDLx icon"
                  />
                </button>
                <button
                  className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
                  id="id-2-2"
                  onBlurCapture={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPressCapture={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  <input
                    checked={false}
                    className="sc-bdnxRM MenuOptionItem___StyledAppBox-kGsnIN jEwVk cYBHaW"
                    type="radio"
                  />
                  <p
                    className="sc-bdnxRM isZYbz"
                  >
                    global.filter_old
                  </p>
                  <IconMock
                    className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG kFTgjR fZkSKg AMDLx icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </th>
        <th
          className="sc-bdnxRM ejslJN"
        />
      </tr>
    </thead>
    <tbody
      className="sc-bdnxRM dZBmCd"
    >
      <tr
        className="sc-bdnxRM Tr___StyledAppBox-hsEdDO  fBURYy"
        id="proposalForm-1"
      >
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminAlphaUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"updatedAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"createdAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs deidyN crfCBn visible-on-hover"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <div
            className="sc-bdnxRM Flex___StyledAppBox-RSPpX hekVRm fGTmtL"
          >
            <button
              aria-describedby="id-3"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ btn-duplicate"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-3"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <button
              aria-controls="id-4"
              aria-describedby="id-5"
              aria-expanded={false}
              aria-haspopup="dialog"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hAxyJi"
              onBlur={[Function]}
              onClick={[Function]}
              onClickCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPressCapture={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-5"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <div
              aria-label="delete-confirmation"
              aria-modal={true}
              data-dialog={true}
              hidden={true}
              id="id-4"
              onAnimationEnd={[Function]}
              onBlur={[Function]}
              onKeyDown={[Function]}
              onTransitionEnd={[Function]}
              role="dialog"
              style={
                Object {
                  "display": "none",
                }
              }
              tabIndex={-1}
            />
          </div>
        </td>
      </tr>
      <tr
        className="sc-bdnxRM Tr___StyledAppBox-hsEdDO  fBURYy"
        id="proposalForm-2"
      >
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
            href="<mock-value-for-field-\\"adminAlphaUrl\\">"
          >
            &lt;mock-value-for-field-"title"&gt;
          </a>
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"updatedAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          &lt;mock-value-for-field-"createdAt"&gt;
        </td>
        <td
          className="sc-bdnxRM Td___StyledAppBox-cCsKUs deidyN crfCBn visible-on-hover"
          style={
            Object {
              "whiteSpace": "initial",
            }
          }
        >
          <div
            className="sc-bdnxRM Flex___StyledAppBox-RSPpX hekVRm fGTmtL"
          >
            <button
              aria-describedby="id-6"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ btn-duplicate"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-6"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <button
              aria-controls="id-7"
              aria-describedby="id-8"
              aria-expanded={false}
              aria-haspopup="dialog"
              className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hAxyJi"
              onBlur={[Function]}
              onClick={[Function]}
              onClickCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPressCapture={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              <IconMock
                className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
              />
            </button>
            <div
              className="cap-tooltip"
              hidden={true}
              id="id-8"
              onAnimationEnd={[Function]}
              onTransitionEnd={[Function]}
              role="tooltip"
              style={
                Object {
                  "display": "none",
                  "left": "100%",
                  "pointerEvents": "none",
                  "position": "fixed",
                  "top": "100%",
                  "zIndex": undefined,
                }
              }
            />
            <div
              aria-label="delete-confirmation"
              aria-modal={true}
              data-dialog={true}
              hidden={true}
              id="id-7"
              onAnimationEnd={[Function]}
              onBlur={[Function]}
              onKeyDown={[Function]}
              onTransitionEnd={[Function]}
              role="dialog"
              style={
                Object {
                  "display": "none",
                }
              }
              tabIndex={-1}
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
